2009-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusmodule.vala:

	NULL-terminate arrays when demarshalling

2009-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Do not handle signals of irrelevant object paths

2009-02-04  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add GTestCase and GTestSuite bindings, patch by John Carr,
	fixes bug 570518

2009-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valacodewriter.vala:

	Write type_id attribute for GBoxed compact classes

	* vapi/gdk-2.0.vapi:
	* vapi/gtk+-2.0.vapi:
	* vapi/pango.vapi:

	Regenerated

2009-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valathrowstatement.vala:

	Fix crash on invalid error expressions

2009-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala:

	Support overriding members in .vapi files

2009-01-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodecontrolflowmodule.vala:
	* gobject/valaccodedelegatemodule.vala:
	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valaccodemethodcallmodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodestructmodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusmodule.vala:
	* gobject/valadbusservermodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagerrormodule.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valagsignalmodule.vala:
	* gobject/valagtypemodule.vala:

	Use `internal' modifier in class declarations to fix build with
	Vala older than r2411

2009-01-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valagobjectmodule.vala:

	Fix struct construct properties

2009-01-31  Jürg Billeter  <j@bitron.ch>

	* vala/valaflowanalyzer.vala:
	* vala/valasymbol.vala:

	Report unused internal methods

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebasemodule.vala: